--- a/multimedia/navidrome/Makefile
+++ b/multimedia/navidrome/Makefile
@@ -3,6 +3,8 @@ DISTVERSIONPREFIX=	v
 DISTVERSION=	0.60.0
 CATEGORIES=	multimedia
 MASTER_SITES=	LOCAL/dtxdf/${PORTNAME}/:assets
+# For instructions on how to create assets:
+#   https://github.com/DtxdF/port-assets-makejails/tree/main/navidrome
 DISTFILES=	${PORTNAME}-${DISTVERSIONPREFIX}${DISTVERSION}.frontend${EXTRACT_SUFX}:assets \
 		${PORTNAME}-${DISTVERSIONPREFIX}${DISTVERSION}.vendor${EXTRACT_SUFX}:assets
 
