--- a/security/opkssh/Makefile
+++ b/security/opkssh/Makefile
@@ -4,6 +4,8 @@ DISTVERSION=	0.10.0
 PORTREVISION=	3
 CATEGORIES=	security
 MASTER_SITES=	LOCAL/dtxdf/${PORTNAME}/
+# For instructions on how to create assets:
+#   https://github.com/DtxdF/port-assets-makejails/tree/main/opkssh
 DISTFILES=	${PORTNAME}-${DISTVERSIONPREFIX}${DISTVERSION}.vendor${EXTRACT_SUFX}
 
 MAINTAINER=	dtxdf@FreeBSD.org
