--- a/www/pocket-id/Makefile
+++ b/www/pocket-id/Makefile
@@ -3,6 +3,8 @@ DISTVERSIONPREFIX=	v
 DISTVERSION=	2.2.0
 CATEGORIES=	www
 MASTER_SITES=	LOCAL/dtxdf/${PORTNAME}/
+# For instructions on how to create assets:
+#   https://github.com/DtxdF/port-assets-makejails/tree/main/pocket-id
 DISTFILES=	${PORTNAME}-${DISTVERSIONPREFIX}${DISTVERSION}.frontend${EXTRACT_SUFX}
 
 MAINTAINER=	dtxdf@FreeBSD.org
