sysutils/backrest: Update to 1.11.2
ChangeLog: https://github.com/garethgeorge/backrest/releases/tag/v1.11.2

--- a/sysutils/backrest/Makefile
+++ b/sysutils/backrest/Makefile
@@ -1,12 +1,11 @@
 PORTNAME=	backrest
 DISTVERSIONPREFIX=	v
-DISTVERSION=	1.11.1
-PORTREVISION=	2
+DISTVERSION=	1.11.2
 CATEGORIES=	sysutils
-MASTER_SITES=	LOCAL/dtxdf/${PORTNAME}/
+MASTER_SITES=	LOCAL/dtxdf/${PORTNAME}/:assets
 # For instructions on how to create assets:
 #   https://github.com/DtxdF/port-assets-makejails/tree/main/backrest
-DISTFILES=	${PORTNAME}-${DISTVERSIONPREFIX}${DISTVERSION}.frontend${EXTRACT_SUFX}
+DISTFILES=	${PORTNAME}-${DISTVERSIONPREFIX}${DISTVERSION}.frontend${EXTRACT_SUFX}:assets
 
 MAINTAINER=	dtxdf@FreeBSD.org
 COMMENT=	Web UI and orchestrator for restic backup
@@ -43,7 +42,7 @@ RCLONE_RUN_DEPENDS=	rclone>=0:net/rclone
 
 # Run 'git checkout ${DISTVERSIONPREFIX}${DISTVERSION} && git rev-parse HEAD'
 # in the Backrest repository to get the value of GITID.
-GITID=		3da2e9a67fdbd2e07d90b1e7dceae19066fd9585
+GITID=		43577232d5050f11815c286e35a8e3f30fcfb371
 
 BUILD_DATE=	$$(date -u '+%Y-%m-%dT%H:%M:%SZ')
 
