--- a/security/netbird/Makefile
+++ b/security/netbird/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	netbird
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.64.3
-PORTREVISION=	1
+DISTVERSION=	0.65.0
 CATEGORIES=	security net net-vpn
 
 MAINTAINER=	dev@netbird.io
@@ -16,15 +15,13 @@ NOT_FOR_ARCHS_REASON=	"no 32-bit builds supported"
 
 RUN_DEPENDS=	ca_root_nss>0:security/ca_root_nss
 
-USES=		go:1.25+,modules
+USES=		go:modules
 USE_RC_SUBR=	${PORTNAME}
 
 GO_MODULE=	github.com/netbirdio/netbird
 GO_TARGET=	./client:${PORTNAME}
 GO_BUILDFLAGS=	-tags freebsd -o ${PORTNAME} -ldflags \
 		"-s -w -X github.com/netbirdio/netbird/version.version=${DISTVERSION}"
-
-WRKSRC=		${WRKDIR}/${PORTNAME}-${DISTVERSION}
 
 PLIST_FILES=	bin/${PORTNAME}
 
