--- a/x11/ly/Makefile
+++ b/x11/ly/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	ly
 DISTVERSIONPREFIX=	v
-DISTVERSION=	1.3.1
+DISTVERSION=	1.3.2
 CATEGORIES=	x11
 MASTER_SITES=	https://codeberg.org/fairyglade/${PORTNAME}/archive/${DISTVERSIONFULL}${EXTRACT_SUFX}?dummy=/
 
@@ -23,10 +23,10 @@ ZIG_ARGS=	-Dprefix_directory="${PREFIX}" \
 		-Dconfig_directory="${PREFIX}/etc" \
 		-Dinit_system=freebsd
 
-GH_TUPLE=	Hejsil:zig-clap:5289e0753cd274d65344bef1c114284c6:clap/../zig-packages/clap-0.11.0-oBajB-HnAQDPCKYzwF7rO3qDFwRcD39Q0DALlTSz5H7e \
-		AnErrupTion:termbox2:290ac6b8225aacfd16851224682b851b6:termbox2/../zig-packages/N-V-__8AAGcUBQAa5vov1Yi_9AXEffFQ1e2KsXaK4dgygRKq \
-		AnErrupTion:zigini:9281f47702b57779e831d7618e158abb8:zigini/../zig-packages/zigini-0.3.3-36M0FRJJAADZVq5HPm-hYKMpFFTr0OgjbEYcK2ijKZ5n \
-		AnErrupTion:ini:918f16d0dcf893d0c1cdffe204faa08bb3584e04:ini/../zig-packages/ini-0.1.0-YCQ9Ys0pAABixEvvQvhVXAdqRE3wrZk_wiL9TPNHhB8d
+ZIG_TUPLE=	clap:github.com/Hejsil/zig-clap/archive/5289e0753cd274d65344bef1c114284c6.tar.gz:clap-0.11.0-oBajB-HnAQDPCKYzwF7rO3qDFwRcD39Q0DALlTSz5H7e \
+		ini:github.com/AnErrupTion/ini/archive/918f16d0dcf893d0c1cdffe204faa08bb3584e04.tar.gz:ini-0.1.0-YCQ9Ys0pAABixEvvQvhVXAdqRE3wrZk_wiL9TPNHhB8d \
+		termbox2:github.com/AnErrupTion/termbox2/archive/496730697c662893eec43192f48ff616c.tar.gz:N-V-__8AAOEWBQDt5tNdIzIFY6n8DdZsCP-6MyLoNS20wgpA \
+		zigini:github.com/AnErrupTion/zigini/archive/9281f47702b57779e831d7618e158abb8.tar.gz:zigini-0.3.3-36M0FRJJAADZVq5HPm-hYKMpFFTr0OgjbEYcK2ijKZ5n
 
 post-install:
 	${REINPLACE_CMD} 's,$$PREFIX_DIRECTORY,${PREFIX},g ; s,$$EXECUTABLE_NAME,ly,g' \
