databases/redis84: New port
This is the redis 8.4.X branch of redis copied from databases/redis in
preparation for upgrading redis to redis 8.6.X branch.

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -892,6 +892,7 @@
     SUBDIR += redis74
     SUBDIR += redis80
     SUBDIR += redis82
+    SUBDIR += redis84
     SUBDIR += redis_exporter
     SUBDIR += redisjson
     SUBDIR += retcl
