devel/protoc-gen-go-grpc: Update to snapshot 830c909

--- a/devel/protoc-gen-go-grpc/Makefile
+++ b/devel/protoc-gen-go-grpc/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	protoc-gen-go-grpc
 DISTVERSIONPREFIX=	v
 DISTVERSION=	1.78.0
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	devel
 
 MAINTAINER=	bofh@FreeBSD.org
@@ -15,6 +15,7 @@ USES=		go
 USE_GITHUB=	yes
 GH_ACCOUNT=	grpc
 GH_PROJECT=	grpc-go
+GH_TAGNAME=	830c909
 GH_TUPLE=	\
 		golang:net:v0.38.0:golang_net/vendor/golang.org/x/net \
 		golang:sys:v0.31.0:golang_sys/vendor/golang.org/x/sys \
@@ -22,7 +23,7 @@ GH_TUPLE=	\
 		google:go-genproto:1a7da9e5054f:google_go_genproto/vendor/google.golang.org/genproto/googleapis/rpc \
 		grpc:grpc-go:v1.70.0:grpc_grpc_go/vendor/google.golang.org/grpc \
 		open-telemetry:opentelemetry-go:v1.34.0:open_telemetry_opentelemetry_go/vendor/go.opentelemetry.io/otel \
-		protocolbuffers:protobuf-go:v1.36.10:protocolbuffers_protobuf_go/vendor/google.golang.org/protobuf
+		protocolbuffers:protobuf-go:v1.36.11:protocolbuffers_protobuf_go/vendor/google.golang.org/protobuf
 
 GO_TARGET=	./cmd/protoc-gen-go-grpc
 
