x11-fonts/nerd-fonts: fix maintainer
I copied the wrong address by accident.

PR:		291929

--- a/x11-fonts/nerd-fonts/Makefile
+++ b/x11-fonts/nerd-fonts/Makefile
@@ -3,7 +3,7 @@ DISTVERSION=	3.4.0
 PORTREVISION?=	1
 CATEGORIES=	x11-fonts
 
-MAINTAINER=	sven.siegmund@gmail.com
+MAINTAINER=	bsdcode@disroot.org
 WWW=		https://www.nerdfonts.com
 
 .if defined(MASTERDIR) && ${MASTERDIR} != ${.CURDIR}
