--- a/security/modsecurity3-nginx/Makefile
+++ b/security/modsecurity3-nginx/Makefile
@@ -30,6 +30,7 @@ CONFIGURE_ARGS+=	--prefix=${PREFIX}/etc/nginx \
 			--pid-path=${_NGINX_RUNDIR}/nginx.pid \
 			--error-log-path=${_NGINX_ERRORLOG} \
 			--user=${WWWOWN} --group=${WWWGRP} \
+			--with-compat \
 			--modules-path=${_MODULESDIR} \
 			--with-file-aio \
 			--http-client-body-temp-path=${_NGINX_TMPDIR}/client_body_temp \
@@ -55,10 +56,12 @@ CONFIGURE_ARGS+=	--prefix=${PREFIX}/etc/nginx \
 			--with-http_ssl_module \
 			--with-http_stub_status_module \
 			--with-http_sub_module \
+			--with-http_v3_module \
 			--without-mail_imap_module \
 			--without-mail_pop3_module \
 			--without-mail_smtp_module \
 			--with-mail_ssl_module \
+			--with-stream_realip_module \
 			--with-stream_ssl_module \
 			--with-stream_ssl_preread_module \
 			--with-threads \
@@ -83,7 +86,7 @@ _NGINX_TMPDIR=		${_NGINX_VARDIR}/tmp/nginx
 _NGINX_VARDIR=	/var
 
 _NGINX_PORTNAME=	nginx
-_NGINX_PORTVERSION=	1.28.0
+_NGINX_PORTVERSION=	1.28.2
 _NGINX_DISTNAME=	${_NGINX_PORTNAME}-${_NGINX_PORTVERSION}
 
 do-install:
