net-im/qxmpp: clean up
Sort plist, use helpers

--- a/net-im/qxmpp/Makefile
+++ b/net-im/qxmpp/Makefile
@@ -20,13 +20,14 @@ USES=		cmake:testing compiler:c++20-lang kde:6 pathfix pkgconfig \
 USE_LDCONFIG=	yes
 USE_QT=		base
 
-CMAKE_ARGS=	-DQT_VERSION_MAJOR=6
-CMAKE_ON=	BUILD_OMEMO
+CMAKE_ON=	BUILD_OMEMO \
+		BUILD_WITH_QT6
 CMAKE_OFF=	BUILD_EXAMPLES \
 		BUILD_TESTS
 CMAKE_TESTING_ON=	BUILD_TESTS
 
-PLIST_SUB=	SOVERSION=${DISTVERSION}
+PLIST_SUB=	PORTVERSION=${DISTVERSION} \
+		SHLIB_VER=7
 
 OPTIONS_DEFINE=		GSTREAMER
 OPTIONS_SUB=		yes
