net-im/qxmpp: Update to 1.14.0
- Enable GStreamer by default, it is required by net-im/kaidan

--- a/net-im/qxmpp/Makefile
+++ b/net-im/qxmpp/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	qxmpp
-DISTVERSION=	1.13.0
+DISTVERSION=	1.14.0
 CATEGORIES=	net-im
 MASTER_SITES=	KDE/unstable/${PORTNAME}
 PKGNAMESUFFIX=	-qt6
@@ -27,9 +27,10 @@ CMAKE_OFF=	BUILD_EXAMPLES \
 CMAKE_TESTING_ON=	BUILD_TESTS
 
 PLIST_SUB=	PORTVERSION=${DISTVERSION} \
-		SHLIB_VER=7
+		SHLIB_VER=8
 
 OPTIONS_DEFINE=		GSTREAMER
+OPTIONS_DEFAULT=	GSTREAMER
 OPTIONS_SUB=		yes
 
 GSTREAMER_DESC=		Audio/video support over Jingle via GStreamer
