--- a/devel/libsoup3/Makefile
+++ b/devel/libsoup3/Makefile
@@ -1,10 +1,9 @@
 PORTNAME=	libsoup
-PORTVERSION=	3.6.5
-PORTREVISION=	2
+PORTVERSION=	3.6.6
 CATEGORIES=	devel gnome
 MASTER_SITES=	GNOME
-DIST_SUBDIR=	gnome
 PKGNAMESUFFIX=	3
+DIST_SUBDIR=	gnome
 
 MAINTAINER=	desktop@FreeBSD.org
 COMMENT=	HTTP client/server library for GNOME
@@ -29,26 +28,25 @@ LIB_DEPENDS=	libbrotlidec.so:archivers/brotli \
 
 RUN_DEPENDS=	glib-networking>0:net/glib-networking
 
-USES=		cpe gettext gnome meson pkgconfig python:build sqlite \
+USES=		cpe gettext-tools gnome meson pkgconfig python:build sqlite \
 		ssl tar:xz
+CPE_VENDOR=	gnome
 USE_GNOME=	glib20 introspection:build libxml2
 USE_LDCONFIG=	yes
-CPE_VENDOR=	gnome
-
-OPTIONS_DEFINE=			VAPI
-OPTIONS_SINGLE=			GSSAPI
-OPTIONS_SINGLE_GSSAPI=		GSSAPI_BASE GSSAPI_HEIMDAL GSSAPI_MIT GSSAPI_NONE
-OPTIONS_DEFAULT=		GSSAPI_${${SSL_DEFAULT} == base :?BASE :NONE} VAPI
-OPTIONS_SUB=			yes
 
 MESON_ARGS=	-Dtests=false \
-		-Dinstalled_tests=false \
 		-Dsysprof=disabled \
 		-Dpkcs11_tests=disabled \
-		-Dfuzzing=disabled \
 		-Dautobahn=disabled \
-		-Dtls_check=true \
 		-Dntlm=disabled
+
+BINARY_ALIAS=	python3=${PYTHON_CMD}
+
+OPTIONS_DEFINE=			VAPI
+OPTIONS_DEFAULT=		GSSAPI_${${SSL_DEFAULT} == base :?BASE :NONE} VAPI
+OPTIONS_SINGLE=			GSSAPI
+OPTIONS_SINGLE_GSSAPI=		GSSAPI_BASE GSSAPI_HEIMDAL GSSAPI_MIT GSSAPI_NONE
+OPTIONS_SUB=			yes
 
 GSSAPI_BASE_USES=		gssapi
 GSSAPI_BASE_MESON_ON=		-Dgssapi=enabled
@@ -66,8 +64,6 @@ GSSAPI_NONE_MESON_DISABLED=	gssapi
 
 VAPI_USES=			vala:build
 VAPI_MESON_ENABLED=		vapi
-
-BINARY_ALIAS=	python3=${PYTHON_CMD}
 
 .if !exists(/usr/libdata/pkgconfig/mit-krb5.pc)
 post-install-GSSAPI_BASE-on:
