graphics/hdr_histogram: Add hdr_histogram 0.11.9
HdrHistogram_c is a C port of High Dynamic Range (HDR) Histogram. This port
contains a subset of the functionality supported by the Java implementation. The
current supported features are:
- Standard histogram with 64 bit counts (32/16 bit counts not supported)
- All iterator types (all values, recorded, percentiles, linear, logarithmic)
- Histogram serialisation (encoding version 1.2, decoding 1.0-1.2)
- Reader/writer phaser and interval recorder

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -346,6 +346,7 @@
     SUBDIR += gwenview
     SUBDIR += h3
     SUBDIR += halftone
+    SUBDIR += hdr_histogram
     SUBDIR += hdr_tools
     SUBDIR += heimer
     SUBDIR += hiptext
