devel/span: Add span 0.0.0.g20220615
This repository contains a single-header implementation of C++20's std::span,
conforming to the C++20 committee draft. It is compatible with C++11, but will
use newer language features if they are available.

It differs from the implementation in the Microsoft GSL in that it is
single-header and does not depend on any other GSL facilities. It also works
with C++11, while the GSL version requires C++14.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -8368,6 +8368,7 @@
     SUBDIR += sope2
     SUBDIR += sord
     SUBDIR += spago
+    SUBDIR += span
     SUBDIR += spark
     SUBDIR += sparsebitset
     SUBDIR += sparsehash
