www/nbytes: Add nbytes 0.1.2
nbytes is a library of byte handling functions extracted from Node.js core.

--- a/www/Makefile
+++ b/www/Makefile
@@ -473,6 +473,7 @@
     SUBDIR += mythplugin-mythweb
     SUBDIR += nanoblogger
     SUBDIR += nanoblogger-extra
+    SUBDIR += nbytes
     SUBDIR += ncgopher
     SUBDIR += neon
     SUBDIR += netrik
