--- a/graphics/egl-wayland/Makefile
+++ b/graphics/egl-wayland/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	egl-wayland
-DISTVERSION=	1.1.20
+DISTVERSION=	1.1.21
 CATEGORIES=	graphics
 
 MAINTAINER=	x11@FreeBSD.org
@@ -12,13 +12,16 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 BUILD_DEPENDS=	eglexternalplatform>=1.1:graphics/eglexternalplatform \
 		${LOCALBASE}/include/libdrm/drm_fourcc.h:graphics/libdrm \
 		wayland-protocols>=1.8:graphics/wayland-protocols
-LIB_DEPENDS=	libwayland-server.so:graphics/wayland
+LIB_DEPENDS=	libdrm.so:graphics/libdrm \
+		libwayland-server.so:graphics/wayland
 
 USES=		gl meson pkgconfig
 USE_GITHUB=	yes
 USE_GL=		egl
 USE_LDCONFIG=	yes
 GH_ACCOUNT=	NVIDIA
+
+PLIST_SUB=	DISTVERSION=${DISTVERSION}
 
 post-patch:
 	@${REINPLACE_CMD} -e "/install/s/datadir')/prefix'), 'libdata'/" \
