devel/clazy: Update to 1.17
Changes: https://invent.kde.org/sdk/clazy/-/blob/v1.17/Changelog

--- a/devel/clazy/Makefile
+++ b/devel/clazy/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	clazy
-DISTVERSION=	1.13
+DISTVERSION=	1.17
 CATEGORIES=	devel kde
 MASTER_SITES=	KDE/stable/${PORTNAME}/${DISTVERSION}/src/
 
@@ -14,6 +14,8 @@ USES=		cmake llvm:lib,noexport perl5 tar:xz
 USE_PERL5=	build
 
 CMAKE_ARGS=	-DLLVM_ROOT=${LLVM_PREFIX}
+
+WRKSRC=		${WRKDIR}/${PORTNAME}-v${DISTVERSION}
 
 OPTIONS_DEFINE=	DOCS
 
