x11-themes/kf6-qqc2-desktop-style: backport upstream patch
KDE bug:	https://bugs.kde.org/516151

--- a/x11-themes/kf6-qqc2-desktop-style/Makefile
+++ b/x11-themes/kf6-qqc2-desktop-style/Makefile
@@ -1,6 +1,9 @@
 PORTNAME=	qqc2-desktop-style
 DISTVERSION=	${KDE_FRAMEWORKS_VERSION}
+PORTREVISION=	1
 CATEGORIES=	x11-themes kde kde-frameworks
+PATCH_SITES=	https://invent.kde.org/frameworks/qqc2-desktop-style/-/commit/
+PATCHFILES=	6d79bb7309352c4f77980ed1c68c984c074745f1.patch:-p1
 
 COMMENT=	Style for Qt Quick Controls 2
 MAINTAINER=	kde@FreeBSD.org
