--- a/sysutils/hexyl/Makefile.crates
+++ b/sysutils/hexyl/Makefile.crates
@@ -5,12 +5,13 @@ CARGO_CRATES=	aho-corasick-1.1.3 \
 		anstyle-query-1.1.2 \
 		anstyle-wincon-3.0.6 \
 		anyhow-1.0.91 \
-		assert_cmd-2.0.16 \
+		assert_cmd-2.1.2 \
 		autocfg-1.4.0 \
 		bitflags-2.6.0 \
 		bstr-1.10.0 \
 		clap-4.5.20 \
 		clap_builder-4.5.20 \
+		clap_complete-4.5.55 \
 		clap_derive-4.5.18 \
 		clap_lex-0.7.2 \
 		colorchoice-1.0.3 \
@@ -18,7 +19,6 @@ CARGO_CRATES=	aho-corasick-1.1.3 \
 		const_format_proc_macros-0.2.33 \
 		diff-0.1.13 \
 		difflib-0.4.0 \
-		doc-comment-0.3.3 \
 		errno-0.3.9 \
 		float-cmp-0.9.0 \
 		heck-0.5.0 \
