--- a/www/miniserve/Makefile.crates
+++ b/www/miniserve/Makefile.crates
@@ -1,6 +1,6 @@
 CARGO_CRATES=	actix-codec-0.5.2 \
-		actix-files-0.6.8 \
-		actix-http-3.11.1 \
+		actix-files-0.6.10 \
+		actix-http-3.11.2 \
 		actix-macros-0.2.4 \
 		actix-multipart-0.7.2 \
 		actix-multipart-derive-0.7.0 \
@@ -8,72 +8,70 @@ CARGO_CRATES=	actix-codec-0.5.2 \
 		actix-rt-2.11.0 \
 		actix-server-2.6.0 \
 		actix-service-2.0.3 \
-		actix-tls-3.4.0 \
+		actix-tls-3.5.0 \
 		actix-utils-3.0.1 \
-		actix-web-4.11.0 \
+		actix-web-4.12.1 \
 		actix-web-codegen-4.3.0 \
 		actix-web-httpauth-0.8.2 \
-		addr2line-0.24.2 \
 		adler2-2.0.1 \
 		adler32-1.2.0 \
 		ahash-0.8.12 \
-		aho-corasick-1.1.3 \
+		aho-corasick-1.1.4 \
 		alloc-no-stdlib-2.0.4 \
 		alloc-stdlib-0.2.2 \
 		allocator-api2-0.2.21 \
-		alphanumeric-sort-1.5.3 \
+		alphanumeric-sort-1.5.5 \
 		android_system_properties-0.1.5 \
-		anstream-0.6.20 \
-		anstyle-1.0.11 \
+		anstream-0.6.21 \
+		anstyle-1.0.13 \
 		anstyle-parse-0.2.7 \
-		anstyle-query-1.1.4 \
-		anstyle-wincon-3.0.10 \
-		anyhow-1.0.99 \
-		arbitrary-1.4.2 \
-		assert_cmd-2.0.17 \
+		anstyle-query-1.1.5 \
+		anstyle-wincon-3.0.11 \
+		anyhow-1.0.101 \
+		assert_cmd-2.1.2 \
 		assert_fs-1.1.3 \
 		async-channel-2.5.0 \
 		async-fs-2.2.0 \
-		async-lock-3.4.1 \
+		async-lock-3.4.2 \
 		async-task-4.7.1 \
 		async-trait-0.1.89 \
 		async-walkdir-2.1.0 \
 		atomic-waker-1.1.2 \
 		autocfg-1.5.0 \
-		backtrace-0.3.75 \
 		base64-0.22.1 \
 		bit-set-0.5.3 \
 		bit-vec-0.6.3 \
-		bitflags-2.9.4 \
+		bitflags-2.11.0 \
 		block-buffer-0.10.4 \
 		blocking-1.6.2 \
 		brotli-8.0.2 \
 		brotli-decompressor-5.0.0 \
-		bstr-1.12.0 \
-		bumpalo-3.19.0 \
-		bytes-1.10.1 \
-		bytesize-2.1.0 \
+		bstr-1.12.1 \
+		bumpalo-3.19.1 \
+		bytes-1.11.1 \
+		bytesize-2.3.1 \
 		bytestring-1.5.0 \
 		caseless-0.2.2 \
-		cc-1.2.37 \
-		cfg-if-1.0.3 \
-		cfg_aliases-0.2.1 \
-		chrono-0.4.42 \
+		cc-1.2.56 \
+		cesu8-1.1.0 \
+		cfg-if-1.0.4 \
+		chrono-0.4.43 \
 		chrono-humanize-0.2.3 \
-		clap-4.5.47 \
-		clap_builder-4.5.47 \
-		clap_complete-4.5.58 \
-		clap_derive-4.5.47 \
-		clap_lex-0.7.5 \
-		clap_mangen-0.2.29 \
+		clap-4.5.58 \
+		clap_builder-4.5.58 \
+		clap_complete-4.5.66 \
+		clap_derive-4.5.55 \
+		clap_lex-1.0.0 \
+		clap_mangen-0.2.31 \
 		codemap-0.1.3 \
 		colorchoice-1.0.4 \
-		colored-3.0.0 \
-		comrak-0.41.1 \
+		colored-3.1.1 \
+		combine-4.6.7 \
+		comrak-0.50.0 \
 		concurrent-queue-2.5.0 \
 		convert_case-0.4.0 \
-		cookie-0.16.2 \
-		core-foundation-0.9.4 \
+		convert_case-0.10.0 \
+		core-foundation-0.10.1 \
 		core-foundation-sys-0.8.7 \
 		core2-0.4.0 \
 		cpufeatures-0.2.17 \
@@ -81,25 +79,23 @@ CARGO_CRATES=	actix-codec-0.5.2 \
 		crossbeam-deque-0.8.6 \
 		crossbeam-epoch-0.9.18 \
 		crossbeam-utils-0.8.21 \
-		crypto-common-0.1.6 \
+		crypto-common-0.1.7 \
 		darling-0.20.11 \
 		darling_core-0.20.11 \
 		darling_macro-0.20.11 \
 		dary_heap-0.3.8 \
-		dav-server-0.8.0 \
-		deranged-0.5.3 \
-		derivative-2.2.0 \
-		derive_arbitrary-1.4.2 \
+		dav-server-0.10.0 \
+		deranged-0.5.6 \
+		derive-where-1.6.0 \
 		derive_more-0.99.20 \
-		derive_more-2.0.1 \
-		derive_more-impl-2.0.1 \
-		deunicode-1.6.2 \
+		derive_more-2.1.1 \
+		derive_more-impl-2.1.1 \
 		diff-0.1.13 \
 		difflib-0.4.0 \
 		digest-0.10.7 \
 		digest_auth-0.3.1 \
 		displaydoc-0.2.5 \
-		doc-comment-0.3.3 \
+		doc-comment-0.3.4 \
 		dyn-clone-1.0.20 \
 		encoding_rs-0.8.35 \
 		entities-1.0.1 \
@@ -110,40 +106,39 @@ CARGO_CRATES=	actix-codec-0.5.2 \
 		fake-tty-0.3.1 \
 		fast_qr-0.13.1 \
 		fastrand-2.3.0 \
-		filetime-0.2.26 \
-		find-msvc-tools-0.1.1 \
-		flate2-1.1.2 \
+		filetime-0.2.27 \
+		find-msvc-tools-0.1.9 \
+		flate2-1.1.9 \
 		float-cmp-0.10.0 \
 		fnv-1.0.7 \
 		foldhash-0.1.5 \
-		foreign-types-0.3.2 \
-		foreign-types-shared-0.1.1 \
+		foldhash-0.2.0 \
 		form_urlencoded-1.2.2 \
 		futf-0.1.5 \
-		futures-0.3.31 \
-		futures-channel-0.3.31 \
-		futures-core-0.3.31 \
-		futures-executor-0.3.31 \
-		futures-io-0.3.31 \
+		futures-0.3.32 \
+		futures-channel-0.3.32 \
+		futures-core-0.3.32 \
+		futures-executor-0.3.32 \
+		futures-io-0.3.32 \
 		futures-lite-2.6.1 \
-		futures-macro-0.3.31 \
-		futures-sink-0.3.31 \
-		futures-task-0.3.31 \
+		futures-macro-0.3.32 \
+		futures-sink-0.3.32 \
+		futures-task-0.3.32 \
 		futures-timer-3.0.3 \
-		futures-util-0.3.31 \
+		futures-util-0.3.32 \
 		generic-array-0.14.7 \
-		getrandom-0.2.16 \
-		getrandom-0.3.3 \
-		gimli-0.31.1 \
+		getrandom-0.2.17 \
+		getrandom-0.3.4 \
+		getrandom-0.4.1 \
 		glob-0.3.3 \
-		globset-0.4.16 \
+		globset-0.4.18 \
 		globwalk-0.9.1 \
 		grass-0.13.4 \
 		grass_compiler-0.13.4 \
 		h2-0.3.27 \
-		h2-0.4.12 \
 		hashbrown-0.14.5 \
 		hashbrown-0.15.5 \
+		hashbrown-0.16.1 \
 		headers-0.4.1 \
 		headers-core-0.3.0 \
 		heck-0.5.0 \
@@ -151,173 +146,168 @@ CARGO_CRATES=	actix-codec-0.5.2 \
 		html5ever-0.26.0 \
 		htmlescape-0.3.1 \
 		http-0.2.12 \
-		http-1.3.1 \
+		http-1.4.0 \
 		http-body-1.0.1 \
 		http-body-util-0.1.3 \
 		http-range-0.1.5 \
 		httparse-1.10.1 \
 		httpdate-1.0.3 \
-		hyper-1.7.0 \
+		hyper-1.8.1 \
 		hyper-rustls-0.27.7 \
-		hyper-tls-0.6.0 \
-		hyper-util-0.1.17 \
-		iana-time-zone-0.1.64 \
+		hyper-util-0.1.20 \
+		iana-time-zone-0.1.65 \
 		iana-time-zone-haiku-0.1.2 \
-		icu_collections-2.0.0 \
-		icu_locale_core-2.0.0 \
-		icu_normalizer-2.0.0 \
-		icu_normalizer_data-2.0.0 \
-		icu_properties-2.0.1 \
-		icu_properties_data-2.0.1 \
-		icu_provider-2.0.0 \
+		icu_collections-2.1.1 \
+		icu_locale_core-2.1.1 \
+		icu_normalizer-2.1.1 \
+		icu_normalizer_data-2.1.1 \
+		icu_properties-2.1.2 \
+		icu_properties_data-2.1.2 \
+		icu_provider-2.1.1 \
+		id-arena-2.3.0 \
 		ident_case-1.0.1 \
 		idna-1.1.0 \
 		idna_adapter-1.2.1 \
-		if-addrs-0.14.0 \
-		ignore-0.4.23 \
+		if-addrs-0.15.0 \
+		ignore-0.4.25 \
 		impl-more-0.1.9 \
 		include_sass-0.13.4 \
-		indexmap-2.11.3 \
-		io-uring-0.7.10 \
+		indexmap-2.13.0 \
 		ipnet-2.11.0 \
-		iri-string-0.7.8 \
-		is_terminal_polyfill-1.70.1 \
-		itoa-1.0.15 \
+		iri-string-0.7.10 \
+		is_terminal_polyfill-1.70.2 \
+		itoa-1.0.17 \
+		jetscii-0.5.3 \
+		jni-0.21.1 \
+		jni-sys-0.3.0 \
 		jobserver-0.1.34 \
-		js-sys-0.3.79 \
+		js-sys-0.3.85 \
 		language-tags-0.3.2 \
 		lasso-0.7.3 \
-		lazy_static-1.5.0 \
-		libc-0.2.175 \
-		libflate-2.1.0 \
-		libflate_lz77-2.1.0 \
-		libredox-0.1.10 \
+		leb128fmt-0.1.0 \
+		libc-0.2.182 \
+		libflate-2.2.1 \
+		libflate_lz77-2.2.0 \
+		libredox-0.1.12 \
 		linux-raw-sys-0.11.0 \
-		litemap-0.8.0 \
-		local-channel-0.1.5 \
+		litemap-0.8.1 \
 		local-waker-0.1.4 \
-		lock_api-0.4.13 \
-		log-0.4.28 \
-		lru-0.14.0 \
-		lru-slab-0.1.2 \
+		lock_api-0.4.14 \
+		log-0.4.29 \
+		lru-0.16.3 \
 		mac-0.1.1 \
 		markup5ever-0.11.0 \
 		markup5ever_rcdom-0.2.0 \
 		maud-0.27.0 \
 		maud_macros-0.27.0 \
 		md-5-0.10.6 \
-		memchr-2.7.5 \
+		memchr-2.8.0 \
 		mime-0.3.17 \
 		mime_guess-2.0.5 \
 		miniz_oxide-0.8.9 \
-		mio-1.0.4 \
+		mio-1.1.1 \
 		nanoid-0.4.0 \
-		native-tls-0.2.14 \
 		new_debug_unreachable-1.0.6 \
 		normalize-line-endings-0.3.0 \
-		num-conv-0.1.0 \
+		num-conv-0.2.0 \
 		num-traits-0.2.19 \
 		num_threads-0.1.7 \
-		object-0.36.7 \
 		once_cell-1.21.3 \
-		once_cell_polyfill-1.70.1 \
-		openssl-0.10.73 \
-		openssl-macros-0.1.1 \
-		openssl-probe-0.1.6 \
-		openssl-sys-0.9.109 \
+		once_cell_polyfill-1.70.2 \
+		openssl-probe-0.2.1 \
 		parking-2.2.1 \
-		parking_lot-0.12.4 \
-		parking_lot_core-0.9.11 \
+		parking_lot-0.12.5 \
+		parking_lot_core-0.9.12 \
 		parse-size-1.1.0 \
 		percent-encoding-2.3.2 \
 		phf-0.10.1 \
 		phf-0.11.3 \
+		phf-0.13.1 \
 		phf_codegen-0.10.0 \
+		phf_codegen-0.13.1 \
 		phf_generator-0.10.0 \
 		phf_generator-0.11.3 \
+		phf_generator-0.13.1 \
 		phf_macros-0.11.3 \
 		phf_shared-0.10.0 \
 		phf_shared-0.11.3 \
-		pin-project-1.1.10 \
-		pin-project-internal-1.1.10 \
+		phf_shared-0.13.1 \
 		pin-project-lite-0.2.16 \
 		pin-utils-0.1.0 \
 		piper-0.2.4 \
 		pkg-config-0.3.32 \
 		port_check-0.3.0 \
-		potential_utf-0.1.3 \
+		potential_utf-0.1.4 \
 		powerfmt-0.2.0 \
 		ppv-lite86-0.2.21 \
 		precomputed-hash-0.1.1 \
-		predicates-3.1.3 \
-		predicates-core-1.0.9 \
-		predicates-tree-1.0.12 \
+		predicates-3.1.4 \
+		predicates-core-1.0.10 \
+		predicates-tree-1.0.13 \
 		pretty_assertions-1.4.1 \
+		prettyplease-0.2.37 \
 		proc-macro-crate-3.4.0 \
-		proc-macro2-1.0.101 \
+		proc-macro2-1.0.106 \
 		proc-macro2-diagnostics-0.10.1 \
-		quinn-0.11.9 \
-		quinn-proto-0.11.13 \
-		quinn-udp-0.5.14 \
-		quote-1.0.40 \
+		quote-1.0.44 \
 		r-efi-5.3.0 \
 		rand-0.8.5 \
-		rand-0.9.2 \
 		rand_chacha-0.3.1 \
-		rand_chacha-0.9.0 \
 		rand_core-0.6.4 \
-		rand_core-0.9.3 \
-		redox_syscall-0.5.17 \
+		redox_syscall-0.5.18 \
+		redox_syscall-0.7.1 \
 		reflink-copy-0.1.28 \
-		regex-1.11.2 \
-		regex-automata-0.4.10 \
-		regex-lite-0.1.7 \
-		regex-syntax-0.8.6 \
+		regex-1.12.3 \
+		regex-automata-0.4.14 \
+		regex-lite-0.1.9 \
+		regex-syntax-0.8.9 \
 		relative-path-1.9.3 \
-		reqwest-0.12.23 \
-		reqwest_dav-0.2.2 \
+		reqwest-0.13.2 \
+		reqwest_dav-0.3.2 \
 		ring-0.17.14 \
 		rle-decode-fast-1.0.3 \
 		roff-0.2.2 \
 		rstest-0.26.1 \
 		rstest_macros-0.26.1 \
-		rustc-demangle-0.1.26 \
 		rustc-hash-2.1.1 \
 		rustc_version-0.4.1 \
-		rustix-1.1.2 \
-		rustls-0.23.31 \
+		rustix-1.1.3 \
+		rustls-0.23.36 \
+		rustls-native-certs-0.8.3 \
 		rustls-pemfile-2.2.0 \
-		rustls-pki-types-1.12.0 \
-		rustls-webpki-0.103.6 \
+		rustls-pki-types-1.14.0 \
+		rustls-platform-verifier-0.6.2 \
+		rustls-platform-verifier-android-0.1.1 \
+		rustls-webpki-0.103.9 \
 		rustversion-1.0.22 \
-		ryu-1.0.20 \
+		ryu-1.0.23 \
 		same-file-1.0.6 \
 		schannel-0.1.28 \
 		scopeguard-1.2.0 \
-		security-framework-2.11.1 \
-		security-framework-sys-2.15.0 \
+		security-framework-3.6.0 \
+		security-framework-sys-2.16.0 \
 		select-0.6.1 \
 		semver-1.0.27 \
-		serde-1.0.225 \
+		serde-1.0.228 \
 		serde-xml-rs-0.6.0 \
-		serde_core-1.0.225 \
-		serde_derive-1.0.225 \
-		serde_json-1.0.145 \
+		serde_core-1.0.228 \
+		serde_derive-1.0.228 \
+		serde_json-1.0.149 \
 		serde_plain-1.0.2 \
 		serde_urlencoded-0.7.1 \
 		sha1-0.10.6 \
 		sha2-0.10.9 \
 		shlex-1.3.0 \
-		signal-hook-registry-1.4.6 \
+		signal-hook-registry-1.4.8 \
+		simd-adler32-0.3.8 \
 		simplelog-0.12.2 \
 		siphasher-0.3.11 \
-		siphasher-1.0.1 \
-		slab-0.4.11 \
-		slug-0.1.6 \
+		siphasher-1.0.2 \
+		slab-0.4.12 \
 		smallvec-1.15.1 \
 		socket2-0.5.10 \
-		socket2-0.6.0 \
-		stable_deref_trait-1.2.0 \
+		socket2-0.6.2 \
+		stable_deref_trait-1.2.1 \
 		string_cache-0.8.9 \
 		string_cache_codegen-0.5.4 \
 		strsim-0.11.1 \
@@ -325,131 +315,142 @@ CARGO_CRATES=	actix-codec-0.5.2 \
 		strum_macros-0.27.2 \
 		subtle-2.6.1 \
 		syn-1.0.109 \
-		syn-2.0.106 \
+		syn-2.0.116 \
 		sync_wrapper-1.0.2 \
 		synstructure-0.13.2 \
-		system-configuration-0.6.1 \
-		system-configuration-sys-0.6.0 \
 		tar-0.4.44 \
-		tempfile-3.22.0 \
+		tempfile-3.25.0 \
 		tendril-0.4.3 \
 		termcolor-1.4.1 \
 		terminal_size-0.4.3 \
 		termtree-0.5.1 \
 		thiserror-1.0.69 \
-		thiserror-2.0.16 \
+		thiserror-2.0.18 \
 		thiserror-impl-1.0.69 \
-		thiserror-impl-2.0.16 \
-		time-0.3.43 \
-		time-core-0.1.6 \
-		time-macros-0.2.24 \
-		tinystr-0.8.1 \
+		thiserror-impl-2.0.18 \
+		time-0.3.47 \
+		time-core-0.1.8 \
+		time-macros-0.2.27 \
+		tinystr-0.8.2 \
 		tinyvec-1.10.0 \
 		tinyvec_macros-0.1.1 \
-		tokio-1.47.1 \
-		tokio-macros-2.5.0 \
-		tokio-native-tls-0.3.1 \
-		tokio-rustls-0.26.2 \
-		tokio-util-0.7.16 \
-		toml_datetime-0.7.1 \
-		toml_edit-0.23.5 \
-		toml_parser-1.0.2 \
-		tower-0.5.2 \
-		tower-http-0.6.6 \
+		tokio-1.49.0 \
+		tokio-macros-2.6.0 \
+		tokio-rustls-0.26.4 \
+		tokio-util-0.7.18 \
+		toml_datetime-0.7.5+spec-1.1.0 \
+		toml_edit-0.23.10+spec-1.0.0 \
+		toml_parser-1.0.8+spec-1.1.0 \
+		tower-0.5.3 \
+		tower-http-0.6.8 \
 		tower-layer-0.3.3 \
 		tower-service-0.3.3 \
-		tracing-0.1.41 \
-		tracing-attributes-0.1.30 \
-		tracing-core-0.1.34 \
+		tracing-0.1.44 \
+		tracing-attributes-0.1.31 \
+		tracing-core-0.1.36 \
 		try-lock-0.2.5 \
 		typed-arena-2.0.2 \
-		typenum-1.18.0 \
-		unicase-2.8.1 \
-		unicode-ident-1.0.19 \
-		unicode-normalization-0.1.24 \
+		typed-path-0.12.3 \
+		typenum-1.19.0 \
+		unicase-2.9.0 \
+		unicode-ident-1.0.24 \
+		unicode-normalization-0.1.25 \
+		unicode-segmentation-1.12.0 \
 		unicode-xid-0.2.6 \
 		unicode_categories-0.1.1 \
 		untrusted-0.9.0 \
-		url-2.5.7 \
+		url-2.5.8 \
 		utf-8-0.7.6 \
 		utf8_iter-1.0.4 \
 		utf8parse-0.2.2 \
-		uuid-1.18.1 \
+		uuid-1.21.0 \
 		v_htmlescape-0.15.8 \
-		vcpkg-0.2.15 \
 		version_check-0.9.5 \
 		wait-timeout-0.2.1 \
 		walkdir-2.5.0 \
 		want-0.3.1 \
 		wasi-0.11.1+wasi-snapshot-preview1 \
-		wasi-0.14.7+wasi-0.2.4 \
-		wasip2-1.0.1+wasi-0.2.4 \
-		wasm-bindgen-0.2.102 \
-		wasm-bindgen-backend-0.2.102 \
-		wasm-bindgen-futures-0.4.52 \
-		wasm-bindgen-macro-0.2.102 \
-		wasm-bindgen-macro-support-0.2.102 \
-		wasm-bindgen-shared-0.2.102 \
-		web-sys-0.3.79 \
-		web-time-1.1.0 \
-		webpki-roots-1.0.2 \
+		wasip2-1.0.2+wasi-0.2.9 \
+		wasip3-0.4.0+wasi-0.3.0-rc-2026-01-06 \
+		wasm-bindgen-0.2.108 \
+		wasm-bindgen-futures-0.4.58 \
+		wasm-bindgen-macro-0.2.108 \
+		wasm-bindgen-macro-support-0.2.108 \
+		wasm-bindgen-shared-0.2.108 \
+		wasm-encoder-0.244.0 \
+		wasm-metadata-0.244.0 \
+		wasmparser-0.244.0 \
+		web-sys-0.3.85 \
+		webpki-root-certs-1.0.6 \
 		winapi-util-0.1.11 \
-		windows-0.62.0 \
-		windows-collections-0.3.0 \
-		windows-core-0.62.0 \
-		windows-future-0.3.0 \
-		windows-implement-0.60.0 \
-		windows-interface-0.59.1 \
-		windows-link-0.1.3 \
-		windows-link-0.2.0 \
-		windows-numerics-0.3.0 \
-		windows-registry-0.5.3 \
-		windows-result-0.3.4 \
-		windows-result-0.4.0 \
-		windows-strings-0.4.2 \
-		windows-strings-0.5.0 \
+		windows-0.62.2 \
+		windows-collections-0.3.2 \
+		windows-core-0.62.2 \
+		windows-future-0.3.2 \
+		windows-implement-0.60.2 \
+		windows-interface-0.59.3 \
+		windows-link-0.2.1 \
+		windows-numerics-0.3.1 \
+		windows-result-0.4.1 \
+		windows-strings-0.5.1 \
+		windows-sys-0.45.0 \
 		windows-sys-0.52.0 \
-		windows-sys-0.59.0 \
 		windows-sys-0.60.2 \
-		windows-sys-0.61.0 \
+		windows-sys-0.61.2 \
+		windows-targets-0.42.2 \
 		windows-targets-0.52.6 \
-		windows-targets-0.53.3 \
-		windows-threading-0.2.0 \
+		windows-targets-0.53.5 \
+		windows-threading-0.2.1 \
+		windows_aarch64_gnullvm-0.42.2 \
 		windows_aarch64_gnullvm-0.52.6 \
-		windows_aarch64_gnullvm-0.53.0 \
+		windows_aarch64_gnullvm-0.53.1 \
+		windows_aarch64_msvc-0.42.2 \
 		windows_aarch64_msvc-0.52.6 \
-		windows_aarch64_msvc-0.53.0 \
+		windows_aarch64_msvc-0.53.1 \
+		windows_i686_gnu-0.42.2 \
 		windows_i686_gnu-0.52.6 \
-		windows_i686_gnu-0.53.0 \
+		windows_i686_gnu-0.53.1 \
 		windows_i686_gnullvm-0.52.6 \
-		windows_i686_gnullvm-0.53.0 \
+		windows_i686_gnullvm-0.53.1 \
+		windows_i686_msvc-0.42.2 \
 		windows_i686_msvc-0.52.6 \
-		windows_i686_msvc-0.53.0 \
+		windows_i686_msvc-0.53.1 \
+		windows_x86_64_gnu-0.42.2 \
 		windows_x86_64_gnu-0.52.6 \
-		windows_x86_64_gnu-0.53.0 \
+		windows_x86_64_gnu-0.53.1 \
+		windows_x86_64_gnullvm-0.42.2 \
 		windows_x86_64_gnullvm-0.52.6 \
-		windows_x86_64_gnullvm-0.53.0 \
+		windows_x86_64_gnullvm-0.53.1 \
+		windows_x86_64_msvc-0.42.2 \
 		windows_x86_64_msvc-0.52.6 \
-		windows_x86_64_msvc-0.53.0 \
-		winnow-0.7.13 \
-		wit-bindgen-0.46.0 \
-		writeable-0.6.1 \
-		xattr-1.5.1 \
-		xml-rs-0.8.27 \
+		windows_x86_64_msvc-0.53.1 \
+		winnow-0.7.14 \
+		wit-bindgen-0.51.0 \
+		wit-bindgen-core-0.51.0 \
+		wit-bindgen-rust-0.51.0 \
+		wit-bindgen-rust-macro-0.51.0 \
+		wit-component-0.244.0 \
+		wit-parser-0.244.0 \
+		writeable-0.6.2 \
+		xattr-1.6.1 \
+		xml-1.2.1 \
+		xml-rs-0.8.28 \
+		xml-rs-1.0.0 \
 		xml5ever-0.17.0 \
-		xmltree-0.11.0 \
+		xmltree-0.12.0 \
 		yansi-1.0.1 \
-		yoke-0.8.0 \
-		yoke-derive-0.8.0 \
-		zerocopy-0.8.27 \
-		zerocopy-derive-0.8.27 \
+		yoke-0.8.1 \
+		yoke-derive-0.8.1 \
+		zerocopy-0.8.39 \
+		zerocopy-derive-0.8.39 \
 		zerofrom-0.1.6 \
 		zerofrom-derive-0.1.6 \
-		zeroize-1.8.1 \
-		zerotrie-0.2.2 \
-		zerovec-0.11.4 \
-		zerovec-derive-0.11.1 \
-		zip-5.1.1 \
+		zeroize-1.8.2 \
+		zerotrie-0.2.3 \
+		zerovec-0.11.5 \
+		zerovec-derive-0.11.2 \
+		zip-8.0.0 \
+		zmij-1.0.21 \
 		zstd-0.13.3 \
 		zstd-safe-7.2.4 \
 		zstd-sys-2.0.16+zstd.1.5.7
