--- a/net-mgmt/bgpq4/Makefile
+++ b/net-mgmt/bgpq4/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	bgpq4
-PORTVERSION=	1.12
+DISTVERSION=	1.13
 CATEGORIES=	net-mgmt
 
 MAINTAINER=	bofh@FreeBSD.org
@@ -14,7 +14,6 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	bgp
 
 GNU_CONFIGURE=	yes
-GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 
 MAKE_ARGS+=	CC="${CC}"
 
