--- a/x11/Makefile
+++ b/x11/Makefile
@@ -140,6 +140,7 @@
     SUBDIR += hyprls
     SUBDIR += hyprpaper
     SUBDIR += hyprpicker
+    SUBDIR += hyprshutdown
     SUBDIR += hyprviz
     SUBDIR += i3bar-river
     SUBDIR += i3blocks
