graphics/cloudcompare: Update 2.12.4 => 2.13.2, take maintainership
* Add WWW for source code repository.
* Static tarball is available, but not used, as GH_TUPLE is needed
  for bundled external libraries and 3-rd party plugins.
* GL is needed for the main application, not for the plugins only.
* Build PLUGIN_IO_QPDAL unconditionally, just like other plugins.
* Supply *.desktop with *.png files from the previous version, as
  upstream doesn't ship them anymore. Fix post-install accordingly.
* Fix plugin path detection actually enabling plugins autoloading.
* Improve COMMENT and pkg-descr

Reviewed by:		arrowd@
Approved by:	    	db@, yuri@ (Mentors, implicit)
Differential Revision: 	https://reviews.freebsd.org/D55434

--- a/graphics/cloudcompare/Makefile
+++ b/graphics/cloudcompare/Makefile
@@ -1,27 +1,36 @@
 PORTNAME=	cloudcompare
 DISTVERSIONPREFIX=	v
-DISTVERSION=	2.12.4
-PORTREVISION=	18
+DISTVERSION=	2.13.2
 CATEGORIES=	graphics
 
-MAINTAINER=	ports@FreeBSD.org
-COMMENT=	3D point cloud processing software
-WWW=		https://www.cloudcompare.org/
+MAINTAINER=	alven@FreeBSD.org
+COMMENT=	3D point cloud (and triangular mesh) editing and processing software
+WWW=		https://www.cloudcompare.org/ \
+		https://github.com/CloudCompare/CloudCompare/
 
 LICENSE=	GPLv2+ LGPL20+
 LICENSE_COMB=	multi
 
-USES=		cmake compiler:c++11-lang localbase:ldflags qt:5
+USES=		cmake gl qt:5
+
 USE_GITHUB=	yes
 GH_ACCOUNT=	CloudCompare
 GH_PROJECT=	${GH_ACCOUNT}
-GH_TUPLE=	CloudCompare:CCCoreLib:f0d5450:CloudCompare/libs/qCC_db/extern/CCCoreLib
-
-USE_QT=		concurrent core gui opengl printsupport widgets buildtools:build qmake:build svg linguisttools:build
+GH_TUPLE=	CloudCompare:CCCoreLib:a8ce4270:cccorelib/libs/qCC_db/extern/CCCoreLib \
+		jlblancoc:nanoflann:2f54b8e:nanoflann/libs/qCC_db/extern/CCCoreLib/extern/nanoflann \
+		asmaloney:libE57Format:1914b8ea:libe57format/plugins/core/IO/qE57IO/extern/libE57Format \
+		google:googletest:7a7231c:googletest/plugins/core/IO/qE57IO/extern/libE57Format/test/extern/googletest \
+		dgirardeau:q3DMASC:4eec6459:q3dmasc/plugins/core/Standard/q3DMASC \
+		davisking:dlib:9117bd78:dlib/plugins/core/Standard/qCanupo/contrib/dlib \
+		CloudCompare:qJSonRPCPlugin:1ff2dbe4:qjsonrpcplugin/plugins/core/Standard/qJSonRPCPlugin \
+		hvs-ait:mplane-plugin:342ef9f5:mplaneplugin/plugins/core/Standard/qMPlane \
+		CyberbuildLab:masonry-cc:0c590fb2:masonrycc/plugins/core/Standard/qMasonry \
+		cloudcompare:PoissonRecon:d215dbaa:poissonrecon/plugins/core/Standard/qPoissonRecon/extern/PoissonRecon \
+		truebelief:cc-treeiso-plugin:fbe6a41a:cctreeisoplugin/plugins/core/Standard/qTreeIso
+USE_GL=		gl glu
 USE_LDCONFIG=	yes
+USE_QT=		concurrent core gui opengl printsupport widgets buildtools:build qmake:build svg linguisttools:build
 
-# PDAL support disabled ATM
-# plugins/core/IO/qPDALIO/src/LASFilter.cpp:1360:24: error: no member named 'incompatibleSrs' in 'pdal::LasHeader'
 OPTIONS_DEFINE=	DXFLIB GAMEPAD GDAL PLUGINS SHAPELIB
 OPTIONS_DEFAULT=DXFLIB GAMEPAD GDAL PLUGINS SHAPELIB
 OPTIONS_SUB=	yes
@@ -29,7 +38,6 @@ OPTIONS_SUB=	yes
 DXFLIB_DESC=	Enable AutoCAD DXF file support
 GAMEPAD_DESC=	Enable Qt gamepad support
 GDAL_DESC=	Enable raster file support
-PDAL_DESC=	Enable point cloud data support
 SHAPELIB_DESC=	Enable shape file support
 
 DXFLIB_CMAKE_BOOL=	OPTION_USE_DXF_LIB
@@ -42,19 +50,16 @@ GDAL_CMAKE_ON=		-DGDAL_INCLUDE_DIR=${PREFIX}/include \
 			-DGDAL_LIBRARY=${PREFIX}/lib/libgdal.so
 GDAL_LIB_DEPENDS=	libgdal.so:graphics/gdal
 
-PDAL_CMAKE_BOOL=	PLUGIN_IO_QPDAL
-PDAL_CMAKE_ON=		-DJSON_ROOT_DIR=${PREFIX}/include/jsoncpp
-PDAL_LIB_DEPENDS=	libpdal_base.so:math/pdal
-
 SHAPELIB_CMAKE_BOOL=	OPTION_USE_SHAPE_LIB
 SHAPELIB_LIB_DEPENDS=	libshp.so:devel/shapelib
 
-PLUGINS_USES=		eigen:3 gl jpeg xorg
+PLUGINS_USES=		eigen:3 jpeg xorg
 PLUGINS_CMAKE_BOOL=	PLUGIN_STANDARD_QANIMATION	\
 			PLUGIN_STANDARD_QBROOM		\
 			PLUGIN_STANDARD_QCOMPASS	\
 			PLUGIN_STANDARD_QCSF		\
 			PLUGIN_IO_QCSV_MATRIX		\
+			PLUGIN_IO_QPDAL			\
 			PLUGIN_GL_QEDL			\
 			PLUGIN_STANDARD_QFACETS		\
 			PLUGIN_STANDARD_QHPR		\
@@ -64,29 +69,24 @@ PLUGINS_CMAKE_BOOL=	PLUGIN_STANDARD_QANIMATION	\
 			PLUGIN_STANDARD_QRANSAC_SD	\
 			PLUGIN_STANDARD_QSRA		\
 			PLUGIN_GL_QSSAO # plugins requiring rare external libs are left out, TODO maybe add some of them?
-PLUGINS_CMAKE_ON=	-DEIGEN_ROOT_DIR:BOOL=${LOCALBASE}/include/eigen3
+PLUGINS_CMAKE_ON=	-DEIGEN_ROOT_DIR:BOOL=${LOCALBASE}/include/eigen3 -DJSON_ROOT_DIR=${LOCALBASE}/include/jsoncpp
 PLUGINS_CXXFLAGS=	${PLUGINS_CXXFLAGS_${CHOSEN_COMPILER_TYPE}}
 PLUGINS_CXXFLAGS_clang=	-Wno-narrowing
-PLUGINS_CXXFLAGS+=	-DEIGEN_DONT_PARALLELIZE # OpenMP is broken in cmake: see bug#223678
-PLUGINS_USE=		XORG=ice,sm,x11,xext,xt GL=gl,glu
+PLUGINS_USE=		XORG=ice,sm,x11,xext,xt
 PLUGINS_LIB_DEPENDS=	libboost_thread.so:devel/boost-libs \
 			libexpat.so:textproc/expat2 \
 			libflann_cpp.so:math/flann \
 			libfreetype.so:print/freetype2 \
+			libpdalcpp.so:math/pdal \
 			libpng.so:graphics/png \
 			libtiff.so:graphics/tiff \
 			libvtkCommonCore-${VTK_VER}.so:math/vtk${VTK_VER:R}
 PLUGINS_IMPLIES=	SHAPELIB
 
-pre-configure:
-	@${REINPLACE_CMD} -e 's,%%PREFIX%%,${PREFIX},1' ${WRKSRC}/snap/gui/ccViewer.desktop ${WRKSRC}/snap/gui/cloudcompare.desktop
-
 post-install:
-	@${MKDIR} ${STAGEDIR}${PREFIX}/share/pixmaps
-	${INSTALL_DATA} ${WRKSRC}/snap/gui/ccViewer.desktop ${STAGEDIR}${PREFIX}/share/applications
-	${INSTALL_DATA} ${WRKSRC}/snap/gui/ccViewer.png ${STAGEDIR}${PREFIX}/share/pixmaps
-	${INSTALL_DATA} ${WRKSRC}/snap/gui/cloudcompare.desktop ${STAGEDIR}${PREFIX}/share/applications
-	${INSTALL_DATA} ${WRKSRC}/snap/gui/cloudcompare.png ${STAGEDIR}${PREFIX}/share/pixmaps
+	${MKDIR} ${STAGEDIR}${PREFIX}/share/pixmaps
+	${INSTALL_DATA} ${FILESDIR}/*.desktop ${STAGEDIR}${PREFIX}/share/applications
+	${INSTALL_DATA} ${FILESDIR}/*.png ${STAGEDIR}${PREFIX}/share/pixmaps
 
 .include <../../math/vtk9/Makefile.version>
 .include <bsd.port.mk>
