multimedia/emby-server: fix fetch
PR:	293369

--- a/multimedia/emby-server/Makefile
+++ b/multimedia/emby-server/Makefile
@@ -136,11 +136,10 @@ OPTIONS_DEFAULT=	LAME
 LAME_LIB_DEPENDS=	libmp3lame.so:audio/lame
 LAME_CONFIGURE_ENABLE=	libmp3lame
 
-OSVERSION_MAJOR=	${OSVERSION:C/^([0-9][0-9]).*/\1/}
 FFMPEG_VERSION=		2023_06_25-u1
-FFDETECT_VERSION=	2023.06.25p4-x64_freebsd${OSVERSION_MAJOR}
-SKIASHARP_VERSION=	2.88.7-x64_freebsd${OSVERSION_MAJOR}
-VIPS_VERSION=		8.16.0-x64_freebsd${OSVERSION_MAJOR}
+FFDETECT_VERSION=	2023.06.25p4-x64_freebsd15
+SKIASHARP_VERSION=	2.88.7-x64_freebsd15
+VIPS_VERSION=		8.16.0-x64_freebsd15
 
 do-install:
 	@${MKDIR} ${STAGEDIR}${PREFIX}/lib/emby-server
