databases/pg_auto_failover: new port: PG extension for automated failover and HA
WWW: https://pg-auto-failover.readthedocs.io
PR: 292990

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -542,6 +542,7 @@
     SUBDIR += pg.el
     SUBDIR += pgFormatter
     SUBDIR += pg_activity
+    SUBDIR += pg_auto_failover
     SUBDIR += pg_citus
     SUBDIR += pg_cron
     SUBDIR += pg_dirtyread
