databases/pg_auto_failover-devel: new port: PG extension for automated failover and HA
WWW: https://pg-auto-failover.readthedocs.io
PR: 292994

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -543,6 +543,7 @@
     SUBDIR += pgFormatter
     SUBDIR += pg_activity
     SUBDIR += pg_auto_failover
+    SUBDIR += pg_auto_failover-devel
     SUBDIR += pg_citus
     SUBDIR += pg_cron
     SUBDIR += pg_dirtyread
